--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 click==6.6
 Django==1.10
+django-bootstrap-breadcrumbs==0.8
 django-discover-runner==1.0
 django-role-permissions==1.2.1
 django-widget-tweaks==1.4.1
