--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 click==6.6
 Django==1.10
+django-autoslug==1.9.3
 django-bootstrap-breadcrumbs==0.8
 django-discover-runner==1.0
 django-role-permissions==1.2.1
@@ -13,4 +14,3 @@ psycopg2==2.6.2
 six==1.10.0
 slugify==0.0.1
 Werkzeug==0.11.11
-wheel==0.24.0
