--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 click==6.6
+deps==0.1.0
 Django==1.10
-django-autoslug==1.9.3
 django-bootstrap-breadcrumbs==0.8
 django-discover-runner==1.0
 django-role-permissions==1.2.1
@@ -10,6 +10,8 @@ itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 Pillow==3.3.1
-psycopg2==2.6.2
+pkg-resources==0.0.0
+pycpfcnpj==1.0.2
 six==1.10.0
+slugify==0.0.1
 Werkzeug==0.11.11
