--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,117 @@
+apturl==0.5.2
+beautifulsoup4==4.4.1
+blinker==1.3
+bokeh==0.12.1
+Brlapi==0.6.4
+cairocffi==0.7.2
+cffi==1.7.0
+chardet==2.3.0
+checkbox-support==0.22
 click==6.6
+command-not-found==0.3
+cryptography==1.2.3
+cycler==0.10.0
+decorator==4.0.10
+defer==1.0.6
 deps==0.1.0
+dj-database-url==0.4.1
 Django==1.10
+django-autoslug==1.9.3
 django-bootstrap-breadcrumbs==0.8
 django-discover-runner==1.0
 django-role-permissions==1.2.1
 django-widget-tweaks==1.4.1
 djangorestframework==3.4.6
+entrypoints==0.2.2
+feedparser==5.1.3
+guacamole==0.9.2
+gunicorn==19.6.0
+html5lib==0.999
+httplib2==0.9.1
+idna==2.0
+ipykernel==4.3.1
+ipython==4.2.1
+ipython-genutils==0.1.0
+ipywidgets==5.1.5
 itsdangerous==0.24
 Jinja2==2.8
+jsonschema==2.5.1
+jupyter==1.0.0
+jupyter-client==4.3.0
+jupyter-console==5.0.0
+jupyter-core==4.1.0
+language-selector==0.1
+louis==2.6.4
+lxml==3.5.0
+Mako==1.0.3
 MarkupSafe==0.23
+matplotlib==1.5.1
+mistune==0.7.3
+nbconvert==4.2.0
+nbformat==4.0.1
+notebook==4.2.1
+numpy==1.11.1
+oauthlib==1.0.3
+onboard==1.2.0
+padme==1.1.1
+pandas==0.18.1
+pexpect==4.2.0
+pickleshare==0.7.3
 Pillow==3.3.1
+plainbox==0.25
+prompt-toolkit==1.0.3
+psycopg2==2.6.2
+ptyprocess==0.5.1
+pyasn1==0.1.9
+pycparser==2.14
 pycpfcnpj==1.0.2
+pycups==1.9.73
+pycurl==7.43.0
+Pygments==2.1.3
+pygobject==3.20.0
+PyJWT==1.3.0
+pyparsing==2.0.3
+python-apt==1.1.0b1
+python-dateutil==2.5.3
+python-debian==0.1.27
+python-systemd==231
+pytz==2016.6.1
+pyxdg==0.25
+PyYAML==3.11
+pyzmq==15.3.0
+qtconsole==4.2.1
+reportlab==3.3.0
+requests==2.9.1
+sessioninstaller==0.0.0
+simplegeneric==0.8.1
 six==1.10.0
 slugify==0.0.1
+system-service==0.3
+terminado==0.6
+tornado==4.3
+traitlets==4.2.2
+ubuntu-drivers-common==0.0.0
+ufw==0.35
+unattended-upgrades==0.1
+unity-scope-calculator==0.1
+unity-scope-chromiumbookmarks==0.1
+unity-scope-colourlovers==0.1
+unity-scope-devhelp==0.1
+unity-scope-firefoxbookmarks==0.1
+unity-scope-gdrive==0.7
+unity-scope-manpages==0.1
+unity-scope-openclipart==0.1
+unity-scope-texdoc==0.1
+unity-scope-tomboy==0.1
+unity-scope-virtualbox==0.1
+unity-scope-yelp==0.1
+unity-scope-zotero==0.1
+urllib3==1.13.1
+usb-creator==0.3.0
+virtualenv==15.0.2
+wcwidth==0.1.7
 Werkzeug==0.11.11
+widgetsnbextension==1.2.6
+xdiagnose==3.8.4.1
+xkit==0.0.0
+XlsxWriter==0.7.3
