--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 Pillow==3.3.1
+pkg-resources==0.0.0
 psycopg2==2.6.2
 pycpfcnpj==1.0.2
 six==1.10.0
