--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,18 @@ django-autoslug==1.9.3
 django-bootstrap-breadcrumbs==0.8
 django-discover-runner==1.0
 django-floppyforms==1.7.0
+django-modalview==0.1.5
 django-role-permissions==1.2.1
 django-s3direct==0.4.2
 django-widget-tweaks==1.4.1
 djangorestframework==3.4.6
+itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 Pillow==3.3.1
 psycopg2==2.6.2
 pycpfcnpj==1.0.2
 six==1.10.0
+slugify==0.0.1
+virtualenv==15.0.3
+Werkzeug==0.11.11
