--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 click==6.6
+decorator==4.0.10
 deps==0.1.0
 dj-database-url==0.4.1
 Django==1.10
@@ -19,5 +20,6 @@ psycopg2==2.6.2
 pycpfcnpj==1.0.2
 six==1.10.0
 slugify==0.0.1
+validators==0.11.0
 virtualenv==15.0.3
 Werkzeug==0.11.11
