Adding WYSIWYG editor Summernote [Issue #232]

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.5.1
 click==6.6
 decorator==4.0.10
 deps==0.1.0
@@ -10,18 +11,22 @@ django-floppyforms==1.7.0
 django-modalview==0.1.5
 django-role-permissions==1.2.1
 django-s3direct==0.4.2
+django-summernote==0.8.6
 django-widget-tweaks==1.4.1
+django-wysiwyg==0.8.0
 djangorestframework==3.4.6
 gunicorn==19.6.0
+itsdangerous==0.24
 Jinja2==2.8
+lxml==3.6.4
 MarkupSafe==0.23
 Pillow==3.3.1
 psycopg2==2.6.2
 pycpfcnpj==1.0.2
+requests==2.11.1
 six==1.10.0
+slugify==0.0.1
 validators==0.11.0
+virtualenv==15.0.3
 Werkzeug==0.11.11
 whitenoise==3.2.2
-beautifulsoup4==4.5.1
-lxml==3.6.4
-requests==2.11.1
