--- a/requirements.txt
+++ b/requirements.txt
@@ -34,4 +34,5 @@ Werkzeug==0.11.11
 whitenoise==3.2.2
 django-session-security==2.4.0
 django-cron==0.5.0
+django-crontab==0.7.1
 python-dateutil==2.6.0
