--- a/requirements.txt
+++ b/requirements.txt
@@ -28,15 +28,18 @@ django-summernote==0.8.6
 django-widget-tweaks==1.4.1
 django-wysiwyg==0.8.0
 djangorestframework==3.4.6
+et-xmlfile==1.0.1
 file-resubmit==0.1.0
 gunicorn==19.6.0
 incremental==16.10.1
+jdcal==1.3
 Jinja2==2.8
 lxml==3.6.4
 MarkupSafe==0.23
 msgpack-python==0.4.8
 numpy==1.12.1
 oauthlib==1.0.3
+openpyxl==2.4.5
 pandas==0.19.2
 Pillow==3.3.1
 psycopg2==2.6.2
@@ -53,4 +56,5 @@ validators==0.11.0
 webencodings==0.5
 Werkzeug==0.11.11
 whitenoise==3.2.2
+xlwt==1.2.0
 zope.interface==4.3.3
