--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appdirs==1.4.3
 asgi-redis==1.0.0
 asgiref==1.0.0
 autobahn==0.17.1
@@ -34,16 +35,19 @@ gunicorn==19.6.0
 incremental==16.10.1
 jdcal==1.3
 Jinja2==2.8
-lxml==3.6.4
+lxml==3.7.3
 MarkupSafe==0.23
 msgpack-python==0.4.8
 numpy==1.12.1
 oauthlib==2.0.1
 openpyxl==2.4.5
+packaging==16.8
 pandas==0.19.2
 Pillow==3.3.1
 psycopg2==2.6.2
 pycpfcnpj==1.0.2
+pyparsing==2.2.0
+pypiwin32==219
 python-dateutil==2.6.0
 pytz==2016.10
 redis==2.10.5
@@ -56,5 +60,6 @@ validators==0.11.0
 webencodings==0.5
 Werkzeug==0.11.11
 whitenoise==3.2.2
+xlrd==1.0.0
 xlwt==1.2.0
 zope.interface==4.3.3
