--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   db:
     restart: always
-    image: postgres
+    image: postgres:latest
     ports:
       - "8010:5432"
   web:
