refactor(development_deploy): finish the configuration that provides a local deployment for local development

--- a/development_deploy/docker-compose.yml
+++ b/development_deploy/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     image: postgres:latest
     networks:
       - database_network
+    ports:
+      - 5432:5432
   web:
     image: amadeus:latest
     build:
