--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,10 @@ services:
         requirements: requirement_files/development_requirement.txt 
     environment:
       DJANGO_MANAGEPY_MIGRATE: 'on'
+      SECRET_KEY: 'foo'
+      FCM_SERVER_KEY: 'boo'
+      DEBUG: 1
+      PORT: 8000
     volumes:
       - .:/code
     depends_on:
@@ -25,6 +29,13 @@ services:
     networks:
       - nginx_network
       - database_network
+  redis:
+    restart: always
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - redisdata:/data
   nginx:
     image: nginx:1.13
     ports:
@@ -41,3 +52,6 @@ networks:
     driver: bridge
   database_network:
     driver: bridge
+
+volumes:
+  redisdata:
