--- a/requirement_files/requirements.txt
+++ b/requirement_files/requirements.txt
@@ -1,9 +1,19 @@
 asgi-redis==1.0.0
 asgiref==1.0.0
+asn1crypto==0.24.0
+attrs==19.1.0
+autobahn==19.9.3
+Automat==0.7.0
+certifi==2019.3.9
+cffi==1.12.3
 channels==1.0.3
+constantly==15.1.0
+coreapi==2.3.3
+coreschema==0.0.4
 coverage==4.2
+cryptography==2.7
 daphne==1.0.2
-decorator==4.0.10
+decorator==4.4.0
 dj-database-url==0.4.1
 Django==1.10.4
 django-autoslug==1.9.3
@@ -28,28 +38,41 @@ django-widget-tweaks==1.4.1
 django-wysiwyg==0.8.0
 djangoajax==2.3.6
 djangorestframework==3.6.4
+elasticsearch==7.0.4
+elasticsearch-dsl==7.0.0
 entrypoints==0.2.2
+et-xmlfile==1.0.1
 fcm-django==0.2.11
 file-resubmit==0.1.0
 gunicorn==19.6.0
+httplib2==0.13.1
+hyperlink==19.0.0
+idna==2.8
+incremental==17.5.0
+itypes==1.1.0
+jdcal==1.4.1
 Jinja2==2.8
-lxml==3.8.0
+lxml==3.7.3
 MarkupSafe==0.23
 msgpack-python==0.4.8
+numpy==1.17.2
 oauth2==1.9.0.post1
 oauth2-provider==0.0
 oauthlib==2.0.1
 openapi-codec==1.3.2
 openpyxl==2.4.5
 packaging==16.8
+pandas==0.19.2
 Pillow==3.3.1
 psycopg2==2.7.3.1
-dj-database-url==0.4.1
-pandas==0.19.2
+pycparser==2.19
 pycpfcnpj==1.0.2
 pyfcm==1.3.1
+PyHamcrest==1.9.0
+pyparsing==2.4.2
 python-dateutil==2.6.0
 python-slugify==1.2.0
+pytz==2019.1
 redis==2.10.5
 requests==2.13.0
 requests-toolbelt==0.8.0
@@ -57,10 +80,16 @@ shortuuid==0.4.3
 simplejson==3.11.1
 six==1.11.0
 slugify==0.0.1
+sqlparse==0.3.0
+Twisted==19.7.0
+txaio==18.8.1
 Unidecode==0.4.19
+uritemplate==3.0.0
+urllib3==1.25.3
 validators==0.11.0
 virtualenv==15.0.3
 Werkzeug==0.11.11
 whitenoise==3.2.2
 xlrd==1.0.0
 xlwt==1.2.0
+zope.interface==4.6.0
