--- a/requirement_files/requirements.txt
+++ b/requirement_files/requirements.txt
@@ -93,3 +93,9 @@ whitenoise==3.2.2
 xlrd==1.0.0
 xlwt==1.2.0
 zope.interface==4.6.0
+
+beautifulsoup4==4.8.2
+click==7.0
+gTTS==2.1.1
+gtt-token==1.1.3
+soupsieve==2.0
