--- a/requirement_files/requirements.txt
+++ b/requirement_files/requirements.txt
@@ -15,7 +15,7 @@ cryptography==2.7
 daphne==1.0.2
 decorator==4.4.0
 dj-database-url==0.4.1
-Django==1.10.4
+Django==1.11.28
 django-autoslug==1.9.3
 django-bootstrap-breadcrumbs==0.8
 django-braces==1.10.0
@@ -24,6 +24,7 @@ django-cron==0.5.0
 django-crontab==0.7.1
 django-discover-runner==1.0
 django-filter==1.0.4
+django-file-resubmit==0.5.2
 django-floppyforms==1.7.0
 django-modalview==0.1.5
 django-oauth-toolkit==1.0.0
@@ -43,7 +44,6 @@ elasticsearch-dsl==7.0.0
 entrypoints==0.2.2
 et-xmlfile==1.0.1
 fcm-django==0.2.11
-file-resubmit==0.1.0
 gunicorn==19.6.0
 httplib2==0.13.1
 hyperlink==19.0.0
