Add base files to run project in docker

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ staticfiles/
 
 # C extensions
 *.so
-Makefile
 
 # Distribution / packaging
 bin/
@@ -60,3 +59,4 @@ questionary/sheets/xls/*
 
 dashboards/sheets/xls/*
 !dashboards/sheets/xls/.keep
+static
