--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,24 +5,22 @@ services:
     restart: always
     image: postgres:latest
     environment:
-      POSTGRES_DB: "postgres"
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "admin"
-      POSTGRES_HOST_AUTH_METHOD: "trust"
-      PGADMIN_DEFAULT_EMAIL: "admin@admin.com"
-      PGADMIN_DEFAULT_PASSWORD: "admin"
+      POSTGRES_DB: "${POSTGRES_DB}"
+      POSTGRES_USER: "${POSTGRES_USER}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+      POSTGRES_HOST_AUTH_METHOD: "${POSTGRES_HOST_AUTH_METHOD}"
+      PGADMIN_DEFAULT_EMAIL: "${PGADMIN_DEFAULT_EMAIL}"
+      PGADMIN_DEFAULT_PASSWORD: "${PGADMIN_DEFAULT_PASSWORD}"
     networks:
       - amadeus_network
-    ports:
-      - 5432:5432
 
   pgadmin:
     image: dpage/pgadmin4
     environment:
-      PGADMIN_DEFAULT_EMAIL: "admin@admin.com"
-      PGADMIN_DEFAULT_PASSWORD: "admin"
+      PGADMIN_DEFAULT_EMAIL: "${PGADMIN_DEFAULT_EMAIL}"
+      PGADMIN_DEFAULT_PASSWORD: "${PGADMIN_DEFAULT_PASSWORD}"
     ports:
-      - "16543:80"
+      - "${PGADMIN_PORT}:80"
     depends_on:
       - db
     networks:
@@ -32,13 +30,14 @@ services:
     image: amadeus:latest
     build: .
     ports:
-      - 9000:8000
+      - "${AMADEUS_PORT}:8000"
     environment:
-      POSTGRES_DB: "postgres"
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "admin"
-      POSTGRES_HOST: "db"
-      POSTGRES_PORT: "5432"
+      POSTGRES_DB: "${POSTGRES_DB}"
+      POSTGRES_USER: "${POSTGRES_USER}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+      POSTGRES_HOST: "${POSTGRES_HOST}"
+      POSTGRES_PORT: "${POSTGRES_PORT}"
+      ELASTICSEARCH_URL: "${ELASTICSEARCH_URL}"
     volumes:
       - .:/code
     depends_on:
@@ -48,21 +47,8 @@ services:
     networks:
       - amadeus_network
 
-  nginx:
-    image: nginx:1.13
-    ports:
-      - 8000:80
-    volumes:
-      - ./config/nginx/conf.d:/etc/nginx/conf.d
-    depends_on:
-      - web
-    networks:
-      - amadeus_network
-
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.9.1
-    ports:
-      - 9200:9200
     environment:
       - "discovery.type=single-node"
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
@@ -72,6 +58,16 @@ services:
         hard: -1
     volumes:
       - elasticsearch:/usr/share/elasticsearch/data
+    networks:
+      - amadeus_network
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.9.1
+    ports:
+      - "${KIBANA_PORT}:5601"
+    environment:
+      ELASTICSEARCH_URL: "${ELASTICSEARCH_URL}"
+      ELASTICSEARCH_HOSTS: "${ELASTICSEARCH_URL}"
     networks:
       - amadeus_network
 
