update granito host

--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost.com www.localhost.com;
+    server_name conectagranito.net.br www.conectagranito.net.br;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -14,11 +14,11 @@ server {
 
 server {
     listen 443 ssl;
-    server_name localhost.com www.localhost.com;
+    server_name conectagranito.net.br www.conectagranito.net.br;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/localhost.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/localhost.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/conectagranito.net.br/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/conectagranito.net.br/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
