--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,30 @@
 version: '3'
 
 services:
+  nginx:
+    image: nginx:1.15-alpine
+    restart: unless-stopped
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx_app.conf:/etc/nginx/conf.d/app.conf
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    networks:
+      - amadeus_network
+
+  certbot:
+    image: certbot/certbot
+    restart: unless-stopped
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    networks:
+      - amadeus_network
+
   db:
     restart: always
     image: postgres:latest
@@ -16,23 +40,11 @@ services:
     volumes:
         - pgdata:/var/lib/postgresql/data
 
-  pgadmin:
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: "${PGADMIN_DEFAULT_EMAIL}"
-      PGADMIN_DEFAULT_PASSWORD: "${PGADMIN_DEFAULT_PASSWORD}"
-    ports:
-      - "${PGADMIN_PORT}:80"
-    depends_on:
-      - db
-    networks:
-      - amadeus_network
-
   web:
     image: amadeus:latest
     build: .
     ports:
-      - "${AMADEUS_PORT}:8000"
+      - 8000:8000
     environment:
       POSTGRES_DB: "${POSTGRES_DB}"
       POSTGRES_USER: "${POSTGRES_USER}"
@@ -45,8 +57,6 @@ services:
         limits:
           cpus: '4'
           memory: 4000M
-    volumes:
-      - .:/code
     depends_on:
       - db
     stdin_open: true
@@ -65,16 +75,6 @@ services:
         hard: -1
     volumes:
       - elasticsearch:/usr/share/elasticsearch/data
-    networks:
-      - amadeus_network
-
-  kibana:
-    image: docker.elastic.co/kibana/kibana:7.9.1
-    ports:
-      - "${KIBANA_PORT}:5601"
-    environment:
-      ELASTICSEARCH_URL: "${ELASTICSEARCH_URL}"
-      ELASTICSEARCH_HOSTS: "${ELASTICSEARCH_URL}"
     networks:
       - amadeus_network
 
