--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -2,6 +2,7 @@ server {
     listen 80;
     server_name conectagranito.net.br www.conectagranito.net.br;
     server_tokens off;
+    client_max_body_size 5M;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -16,6 +17,7 @@ server {
     listen 443 ssl;
     server_name conectagranito.net.br www.conectagranito.net.br;
     server_tokens off;
+    client_max_body_size 5M;
 
     ssl_certificate /etc/letsencrypt/live/conectagranito.net.br/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/conectagranito.net.br/privkey.pem;
