--- a/requirement_files/requirements.txt
+++ b/requirement_files/requirements.txt
@@ -107,3 +107,6 @@ pyexcel-xlsx==0.5.8
 
 django-datatable-view==0.9.0
 nested-lookup==0.2.22
+
+django-debug-toolbar==1.11.0
+django-channels-panel==0.0.5
